tests/missing_fmt.stderr
error: requires at least a format string argument
 --> $DIR/missing_fmt.rs:3:1
  |
3 | #[context]
  | ^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
